tests/error/struct_errors/constructor_arg_mismatch_poly.err
Guppy compilation failed. Error in file $FILE:19

17:    @guppy(module)
18:    def main() -> None:
19:        MyStruct(0, False)
                       ^^^^^
GuppyTypeError: Expected argument of type `int`, got `bool`
